# GRANDPA_JOE

./: .env.example  .gitignore  CLAUDE.md  HOW_TO_USE.md  pyproject.toml
data/: derby_2026_pps.json  derby_2026_scored.json
grandpa_joe/: __init__.py  __main__.py  config.py  path_manager.py
grandpa_joe/api/: __init__.py  models.py  routes_nexus.py  routes_racing.py  server.py
grandpa_joe/brain/: __init__.py  equibase_fetch.py  equibase_simd.py  equibase_xml.py  ingestion.py  migrations.py  pace_extract.py  queries.py  racing_brain.py  schema.py
grandpa_joe/crawlers/: __init__.py  base.py  dynamic.py  ingestion_bridge.py  models.py  runner.py  scheduler.py
grandpa_joe/crawlers/sites/: __init__.py  drf.py  equibase.py  twinspires.py
grandpa_joe/ethics/: __init__.py  responsible_gambling.py
grandpa_joe/models/: __init__.py  backtest.py  derby_patterns.py  features.py  handicapper.py  kelly.py  pace.py  trainer.py
grandpa_joe/nexus/: __init__.py  client.py  messages.py
grandpa_joe/personality/: __init__.py  grandpa_joe.py
scripts/: backfill_pace.py  bulk_ingest_2023.py  derby_2026_3d.py  key_wheel_backtest.py  render_race_3d.py
tests/: test_brain.py  test_ethics.py  test_ingestion.py  test_kelly.py
trained_models/: handicapper.json  training_metrics.json
